test/corpus/const_prop.input.txt
==================
constant propagation input
==================

fun i32 @const_prop_same () {
init:
  bid: b0
  allocations: 

block b0:
  br undef:i1, b1(), b1()

block b1:
  ret 0:i1
}

fun i32 @const_prop_true () {
init:
  bid: b0
  allocations: 

block b0:
  br 1:i1, b1(), b2()

block b1:
  ret 0:i1

block b2:
  ret 0:i1
}

fun i32 @const_prop_false () {
init:
  bid: b0
  allocations: 

block b0:
  br 0:i1, b1(), b2()

block b1:
  ret 0:i1

block b2:
  ret 0:i1
}

fun i32 @const_prop_switch_same () {
init:
  bid: b0
  allocations: 

block b0:
  switch 42:i32 default b1() [
    2:i32 b1()
    3:i32 b1()
  ]

block b1:
  ret 0:i1
}

fun i32 @const_prop_switch_case () {
init:
  bid: b0
  allocations: 

block b0:
  switch 2:i32 default b1() [
    2:i32 b2()
    3:i32 b3()
  ]

block b1:
  ret 0:i1

block b2:
  ret 0:i1

block b3:
  ret 0:i1
}

fun i32 @const_prop_switch_default () {
init:
  bid: b0
  allocations: 

block b0:
  switch 42:i32 default b1() [
    2:i32 b2()
    3:i32 b3()
  ]

block b1:
  ret 0:i1

block b2:
  ret 0:i1

block b3:
  ret 0:i1
}

---

(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant)
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (switch_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (switch_body
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (switch_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (switch_body
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (switch_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (switch_body
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))
              (switch_case
                (operand
                  (constant_operand
                    (constant
                      (number))
                    (type
                      (sigined_integer_type))))
                (block_id))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))))))
