test/corpus/deadcode.input.txt
==================
dead code elemination input
==================

fun unit @sink (unit) {
init:
  bid: b0
  allocations:

block b0:
  %b0:p0:unit
  ret unit:unit
}

fun i32 @deadcode () {
init:
  bid: b0
  allocations:
    %l0:i32:x
    %l1:i32:y

block b0:
  %b0:i0:i32 = add 100:i32 200:i32
  %b0:i1:i32 = add %b0:i0:i32 300:i32
  %b0:i2:i32 = add %b0:i1:i32 400:i32
  %b0:i3:unit = store %b0:i0:i32 %l1:i32*

  br undef:i1, b1(), b2()

block b1:
  %b1:i0:unit = nop
  %b1:i1:unit = call @sink:[ret:unit params:(unit)]*(%b1:i0:unit)

  j b3()

block b2:
  %b2:i0:unit = store 42:i32 %l1:i32*

  j b3()

block b3:
  ret 0:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type)
      (at_identifier)
      (function_param_types
        (type)))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type))
        (exit
          (return
            (operand
              (constant_operand
                (constant)
                (type))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations
          (allocation
            (type
              (sigined_integer_type))
            (identifier))
          (allocation
            (type
              (sigined_integer_type))
            (identifier))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant)
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type)
          (nop))
        (instruction
          (instruction_id)
          (type)
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type)
                        (function_param_types
                          (type))))))))
            (operand
              (register_operand
                (instruction_id)
                (type)))))
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))))))
