test/corpus/empty.input.txt
==================
empty input
==================

fun i32 @foo () {
init:
  bid: b0
  allocations: 

block b0:
  j b1(42:i32)

block b1:
  %b1:p0:i32
  j b3()

block b3:
  ret 37:i32
}

fun i32 @bar () {
init:
  bid: b0
  allocations: 

block b0:
  j b1(42:i32)

block b1:
  %b1:p0:i32
  br 1:i1, b2(), b2()

block b2:
  j b3()

block b3:
  %b3:i0:i1 = cmp eq 0:i32 0:i32
  ret 37:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type)))
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type)))
        (exit
          (conditional_branch
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (jump
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))))))
